- Refactoring code for adding warning class on Workplace Blocks - Fix small layout issues

--- a/themes/evolve/lessc/Andy.less
+++ b/themes/evolve/lessc/Andy.less
@@ -925,7 +925,7 @@ div[id^="home-tile-view-block"]{
         font-family: 'fontawesome';
         color: #c3c8c8;
         position: absolute;
-        top: 35%;
+        top: calc(~'50% - 7.5px');
         right: 10px;
         width: 15px;
         height: 15px;
