--- a/themes/evolve/lessc/PD/PDshopping.less
+++ b/themes/evolve/lessc/PD/PDshopping.less
@@ -218,7 +218,7 @@ fieldset {
             font-family: 'fontawesome';
             color: #c3c8c8;
             position: absolute;
-            top: 35%;
+            top: calc(~'50% - 7.5px');
             right: 10px;
             width: 15px;
             height: 15px;
